<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    app:ignore="NamespaceTypo">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/carView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        cardView:cardCornerRadius="16dp"
        cardView:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EDEDED">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/humidityImg"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:background="@color/light_grey"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_water_drop_24"
                cardView:layout_constraintEnd_toEndOf="parent"
                cardView:layout_constraintStart_toStartOf="parent"
                cardView:layout_constraintTop_toTopOf="parent"
                cardView:shapeAppearanceOverlay="@style/roundedImageView" />

            <TextView
                android:id="@+id/humidityTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                cardView:layout_constraintEnd_toEndOf="parent"
                cardView:layout_constraintLeft_toRightOf="@id/humidityImg"
                cardView:layout_constraintStart_toStartOf="parent"
                cardView:layout_constraintTop_toBottomOf="@+id/humidityImg" />

            <TextView
                android:id="@+id/humidityValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/_72"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                cardView:layout_constraintBottom_toBottomOf="parent"
                cardView:layout_constraintEnd_toEndOf="@+id/humidityTitle"
                cardView:layout_constraintStart_toStartOf="@+id/humidityTitle"
                cardView:layout_constraintTop_toBottomOf="@+id/humidityTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>